tests/p115.rc
float***** f;

static int**** f2;

function: int main() {
//error
f[0][0][1][2][1+f[9][8][7]] = 0.0;
f[0][0][1][2][1+f[9][8][7][1][2]] = 0.0;

//good
f[0][0][f2[9][0][0][1]][1][2] = 0.0;


//error
f[0][0][0][0][0][0][0][0][0][0][0][0][0] = 9.0;
return 0;
}
